--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,16 +2,16 @@
 <resources>
     <style name="primary_header" parent="android:TextAppearance">
         <item name="fontFamily">@font/inder</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/dark_text</item>
         <item name="android:textSize">32sp</item>
     </style>
 
     <style name="body_text">
-        <item name="fontFamily">@font/sansita</item>
-        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/inder_regular</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/light_text</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">15sp</item>
     </style>
     <style name="login_text">
         <item name="android:shadowColor">@color/black</item>
