--- a/app/src/main/res/layout/fragment_instructor.xml
+++ b/app/src/main/res/layout/fragment_instructor.xml
@@ -69,7 +69,8 @@
                 <VideoView
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/video1"/>
+                        android:id="@+id/video1"
+                        android:background="@drawable/boarder"/>
                 <TextView
                         android:text="@string/title"
                         style="@style/primary_header"
@@ -108,7 +109,8 @@
                 <VideoView
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/video2"/>
+                        android:id="@+id/video2"
+                        android:background="@drawable/boarder"/>
                 <TextView
                         android:text="@string/title"
                         style="@style/primary_header"
@@ -148,7 +150,8 @@
                 <VideoView
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/video3"/>
+                        android:id="@+id/video3"
+                        android:background="@drawable/boarder"/>
                 <TextView
                         android:text="@string/title"
                         style="@style/primary_header"
@@ -187,7 +190,8 @@
                 <VideoView
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/video4"/>
+                        android:id="@+id/video4"
+                        android:background="@drawable/boarder"/>
                 <TextView
                         android:text="@string/title"
                         style="@style/primary_header"
@@ -226,7 +230,8 @@
                 <VideoView
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/video5"/>
+                        android:id="@+id/video5"
+                        android:background="@drawable/boarder"/>
                 <TextView
                         android:text="@string/title"
                         style="@style/primary_header"
@@ -245,6 +250,46 @@
                         android:layout_below="@id/textView9"
                         android:layout_toEndOf="@id/video5"
                         android:id="@+id/textView10"/>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+                android:id="@+id/sixthCard"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <VideoView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/video6"
+                        android:background="@drawable/boarder"/>
+                <TextView
+                        android:text="@string/title"
+                        style="@style/primary_header"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@id/video6"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/textView11" android:textStyle="bold"/>
+                <TextView
+                        android:text="@string/body"
+                        style="@style/body_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@id/textView11"
+                        android:layout_toEndOf="@id/video6"
+                        android:id="@+id/textView12"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
