--- a/app/src/main/res/layout/fragment_instructor.xml
+++ b/app/src/main/res/layout/fragment_instructor.xml
@@ -21,6 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
         <SearchView
+                android:id="@+id/search_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:queryHint="Search..."
@@ -29,6 +30,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +74,7 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/video1"
                         android:layout_centerHorizontal="true"
-                        android:id="@+id/textView" android:textStyle="bold"/>
+                        android:id="@+id/title" android:textStyle="bold"/>
                 <TextView
                         android:text="@string/body"
                         style="@style/body_text"
@@ -80,9 +82,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_below="@id/textView"
+                        android:layout_below="@id/title"
                         android:layout_toEndOf="@id/video1"
-                        android:id="@+id/textView2"/>
+                        android:id="@+id/description"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -112,7 +114,7 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/video2"
                         android:layout_centerHorizontal="true"
-                        android:id="@+id/textView3"
+                        android:id="@+id/title2"
                         android:textStyle="bold"/>
                 <TextView
                         android:text="@string/body"
@@ -121,9 +123,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_below="@id/textView3"
+                        android:layout_below="@id/title2"
                         android:layout_toEndOf="@id/video2"
-                        android:id="@+id/textView4"/>
+                        android:id="@+id/description2"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -153,7 +155,7 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/video3"
                         android:layout_centerHorizontal="true"
-                        android:id="@+id/textView5" android:textStyle="bold"/>
+                        android:id="@+id/title3" android:textStyle="bold"/>
                 <TextView
                         android:text="@string/body"
                         style="@style/body_text"
@@ -161,9 +163,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_below="@id/textView5"
+                        android:layout_below="@id/title3"
                         android:layout_toEndOf="@id/video3"
-                        android:id="@+id/textView6"/>
+                        android:id="@+id/description3"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -193,7 +195,7 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/video4"
                         android:layout_centerHorizontal="true"
-                        android:id="@+id/textView7" android:textStyle="bold"/>
+                        android:id="@+id/title4" android:textStyle="bold"/>
                 <TextView
                         android:text="@string/body"
                         style="@style/body_text"
@@ -201,9 +203,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_below="@id/textView7"
+                        android:layout_below="@id/title4"
                         android:layout_toEndOf="@id/video4"
-                        android:id="@+id/textView8"/>
+                        android:id="@+id/description4"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -233,7 +235,7 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/video5"
                         android:layout_centerHorizontal="true"
-                        android:id="@+id/textView9" android:textStyle="bold"/>
+                        android:id="@+id/title5" android:textStyle="bold"/>
                 <TextView
                         android:text="@string/body"
                         style="@style/body_text"
@@ -241,9 +243,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_below="@id/textView9"
+                        android:layout_below="@id/title5"
                         android:layout_toEndOf="@id/video5"
-                        android:id="@+id/textView10"/>
+                        android:id="@+id/description5"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -273,7 +275,7 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/video6"
                         android:layout_centerHorizontal="true"
-                        android:id="@+id/textView11" android:textStyle="bold"/>
+                        android:id="@+id/title6" android:textStyle="bold"/>
                 <TextView
                         android:text="@string/body"
                         style="@style/body_text"
@@ -281,9 +283,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_below="@id/textView11"
+                        android:layout_below="@id/title6"
                         android:layout_toEndOf="@id/video6"
-                        android:id="@+id/textView12"/>
+                        android:id="@+id/description6"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
