--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_nav"
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"> -->
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_nav"
@@ -35,7 +35,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:itemIconTint="@drawable/bottom_nav_colors"
                 app:menu="@menu/bottom_nav"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- </androidx.constraintlayout.widget.ConstraintLayout> -->
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
